--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minions Talk</title>
-    
-   <link href="style.css" rel="stylesheet" /> 
-  
+
+    <link href="style.css" rel="stylesheet" />
+
 </head>
+
 <body>
     <h1 class="head">Minions Talk</h1>
     <div class="div"></div>
-    <textarea id="Input-txt"
-        class="text" placeholder="Hey say something here!"></textarea>
-
-        <div class="div"></div>
-
-    <button id="btnToTranslate"
-    class="button">Translate</button>
+    <textarea id="Input-txt" class="text" placeholder="Hey say something here!"></textarea>
 
     <div class="div"></div>
 
-    <div id="output-txt"
-    class="output"></div>
+    <button id="btnToTranslate" class="button">Translate</button>
+
+    <div class="div"></div>
+
+    <div id="output-txt" class="output"></div>
 
     <!-- <div class="div"></div> -->
 
     <footer class="footer">
         <div class="footer-head">about</div>
-        <p class="text">Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator
+        <p class="text">Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use
+            the translator
             to convert your text from English to Minion speak or Banana language.</p>
     </footer>
 
     <script src="app.js" type="text/javascript"> </script>
 </body>
+
 </html>
